public/css/style.css
html, body, #cnt {
  height: 100%;
  width: 99%; }

.container-fluid {
  padding-left: 10px !important;
  padding-right: 5px !important; }

#info {
  /* in reality 16%ish*/ }

#mapsCnt {
  height: 80%;
  /* if you scroll past info, should be full page */ }

body {
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }

a {
  color: #00B7FF; }

.map-col {
  width: 100%;
  max-height: 90%;
  padding-left: 5px !important;
  padding-right: 5px !important; }

.r6-row {
  height: 100%; }

#map-name {
  margin-top: 10px;
  margin-bottom: 5px; }

.r6-floor-name {
  margin-top: 10px;
  margin-bottom: 5px; }

